# MyVideoCapture

./: .gitignore  CMakeLists.txt  README.md  main.cpp
web_camera/: CMakeLists.txt  directshow_videocapture.cpp  directshow_videocapture.h  web_camera.cpp  web_camera.h
web_camera/3party/ewclib/: ewclib.h  ewclib_.cpp  ewclib_.h
